--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
 
+    implementation 'com.github.cooltechworks:WhatsappFormatter:v1.0'
+
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support:support-v4:27.1.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
