--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,29 @@
         <activity
             android:name=".ListAct"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MovieDetailAct"
+            android:parentActivityName=".ListAct"
+            android:theme="@style/AppTheme.nobar" />
+        <activity
+            android:name=".TvDetailAct"
+            android:parentActivityName=".ListAct"
+            android:theme="@style/AppTheme.nobar" />
+        <activity
+            android:name=".CastProfileAct"
+            android:theme="@style/AppTheme.nobar" />
+        <activity android:name=".ReviewAct" />
+        <activity
+            android:name=".SplashScreen"
+            android:theme="@style/AppTheme.nobar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MovieDetailAct"
-            android:parentActivityName=".ListAct"
-            android:theme="@style/AppTheme.nobar" />
-        <activity android:name=".TvDetailAct"
-            android:parentActivityName=".ListAct"
-            android:theme="@style/AppTheme.nobar"/>
-        <activity android:name=".CastProfileAct"
-            android:theme="@style/AppTheme.nobar"/>
-        <activity android:name=".ReviewAct" />
+        <activity android:name=".SettingAct"></activity>
     </application>
 
 </manifest>
