--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,33 +11,36 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:fullBackupContent="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".ListAct"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:launchMode="singleTop"/>
         <activity
             android:name=".MovieDetailAct"
             android:parentActivityName=".ListAct"
-            android:theme="@style/AppTheme.nobar" />
+            android:theme="@style/AppTheme.noBar"
+            android:launchMode="singleTop"/>
         <activity
             android:name=".TvDetailAct"
             android:parentActivityName=".ListAct"
-            android:theme="@style/AppTheme.nobar" />
+            android:theme="@style/AppTheme.noBar"
+            android:launchMode="singleTop"/>
         <activity
             android:name=".CastProfileAct"
-            android:theme="@style/AppTheme.nobar" />
+            android:theme="@style/AppTheme.noBar" />
         <activity android:name=".ReviewAct" />
         <activity
             android:name=".SplashScreen"
-            android:theme="@style/AppTheme.nobar">
+            android:theme="@style/AppTheme.noBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SettingAct"></activity>
     </application>
 
 </manifest>
