--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,27 +7,27 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:fullBackupContent="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".ListAct"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MovieDetailAct"
+            android:launchMode="singleTop"
             android:parentActivityName=".ListAct"
-            android:theme="@style/AppTheme.noBar"
-            android:launchMode="singleTop"/>
+            android:theme="@style/AppTheme.noBar" />
         <activity
             android:name=".TvDetailAct"
+            android:launchMode="singleTop"
             android:parentActivityName=".ListAct"
-            android:theme="@style/AppTheme.noBar"
-            android:launchMode="singleTop"/>
+            android:theme="@style/AppTheme.noBar" />
         <activity
             android:name=".CastProfileAct"
             android:theme="@style/AppTheme.noBar" />
@@ -41,6 +41,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SettingActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".ListAct"/>
     </application>
 
 </manifest>
